src/test/deca/context/invalid/heritage_cyclique.deca
// Description :
// Héritage boucle 

// Resultats :
// Echec

class Attaquant extends Defenseur { }
class Defenseur extends Attaquant { }

{ }